summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: not found: value EAST
setDirection(EAST) 
             ^